# mcp-db-agent

./: .dockerignore  .env.example  .gitignore  ADVERTISING_ROADMAP.md  AGENTS.md  CLAUDE.md  Dockerfile  FRONTEND_IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MIGRATION_PLAN.md  OAUTH_IMPLEMENTATION_PLAN.md  PRE_DEPLOY_VERIFICATION.md  PRODUCTION_AUDIT.md  PRODUCTION_GAPS_PLAN.md  PRODUCTION_READINESS_ROADMAP.md  README.md  SAAS_IDENTITY_AND_PRODUCTION_PLAN.md  SINGLE_USER_ACCOUNT_REFACTOR_PLAN.md  alembic.ini  build_guide.md  claude_desktop_config.json  docker-compose.demo.yml  docker-compose.yml  mcp_database_analytics_agent_blueprint.md  package-lock.json  pyproject.toml  server.json
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_onboarding_status.py  0003_onboarding_state_machine.py  0004_target_architecture_reset.py  0005_phase1_split_account_states.py  0006_phase3_query_history_quota_context.py  0007_single_user_schema.py  0008_oauth_linkage.py  0009_billing_backed_entitlements.py  0010_user_timezone.py  0011_query_history_error_code.py
frontend/: .env.local.example  README.md  package.json  pnpm-lock.yaml
scripts/: DEMO_SCRIPT.md  manage_tenants.py  reset_auth_db.py  seed_demo_db.py  smoke_mcp_deployment.py  smoke_oauth_mcp.py
secrets/: auth_db_password.txt
src/: app.py  config.py  email_sender.py  server.py
src/api/: admin.py  app.py  (+1 more)
tests/: conftest.py  conftest_helpers.py  test_admin_endpoints.py  test_api_admin.py  test_api_docs_gate.py  test_api_me.py  test_api_register.py  test_api_setup.py  test_app_schema_check.py  test_billing.py  test_config.py  test_cors.py  test_crypto.py  test_dashboard.py  test_drain.py  test_email_sender.py  test_entitlements.py  test_health.py  test_integration.py  test_mcp_rate_limit.py  test_middleware.py  test_migration_0007.py  test_migration_0007_integration.py  test_observability.py  test_observability_disabled.py  test_onboarding_state_machine.py  test_pipeline_factory.py  test_query_history.py  test_quota_enforcement.py  test_registration_flow.py  test_result_formatter.py  test_schema_inspector.py  test_schema_inspector_cache.py  test_self_corrector.py  test_self_corrector_drift.py  test_server_tool_metadata.py  test_setup_payloads.py  test_smoke_mcp_deployment.py  test_sql_executor.py  test_sql_executor_integration.py  (+8 more)
(+133 files in other folders)
