[project]
name = "mcp-db-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.87.0",
    "groq>=1.1.2",
    "mcp>=1.26.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "sqlparse>=0.5.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: End-to-end tests that call the real LLM API (skip with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# server.py patches sys.path before package imports so the project root is on
# the path when running as a script.  E402 (module-level import not at top) is
# expected and intentional here.
"src/server.py" = ["E402"]